<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dishes">

    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/Layout2"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/dishes"
            android:textAlignment="center"
            android:textSize="31sp" />

        <TextView
            android:id="@+id/dishesTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="31sp"
            android:layout_weight="60" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Layout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/BottomBar"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/totalWaterUsed"
            android:textAlignment="center"
            android:textSize="31sp" />

        <TextView
            android:id="@+id/totalForDishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="31sp"
            android:layout_weight="60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:textSize="21sp"
            android:onClick="backButton"
            android:text="@string/Back" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:onClick="homeButton"
            android:text="@string/home"
            android:layout_weight="33.3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:onClick="nextActivity"
            android:text="@string/Next"
            android:layout_weight="33.3" />
    </LinearLayout>

</RelativeLayout>